--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
-    "mongoose": "^4.8.2"
+    "express-session": "^1.15.1",
+    "mongoose": "^4.8.2",
+    "morgan": "^1.8.1",
+    "node-rsa": "^0.4.2"
   }
 }
