--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/melpst/ku-keygenerate-backend#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "crypto-browserify": "^3.11.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "mongoose": "^4.8.2",
     "morgan": "^1.8.1",
-    "node-rsa": "^0.4.2"
+    "node-rsa": "^0.4.2",
+    "ursa": "^0.9.4"
   }
 }
