--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.16.1",
-    "crypto-browserify": "^3.11.0",
+    "crypto": "0.0.3",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "mongoose": "^4.8.2",
-    "morgan": "^1.8.1",
-    "node-rsa": "^0.4.2",
-    "ursa": "^0.9.4"
+    "morgan": "^1.8.1"
   }
 }
