--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/melpst/ku-keygenerate-backend#readme",
   "dependencies": {
+    "axios": "^0.16.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.16.1",
-    "crypto": "0.0.3",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "mongoose": "^4.8.2",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "ursa": "^0.9.4"
   }
 }
