--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.8.2",
     "morgan": "^1.8.1",
     "ursa": "^0.9.4"
