--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.16.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.16.1",
+    "cors": "^2.8.3",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "lodash": "^4.17.4",
